examples/pos/crosscall.pcl
program crosscall;

procedure f();
begin
  g();
end;

procedure g();
begin
  f();
end;

begin
  f();
end.
